idf_component_register(
    SRCS
        "main.c"
        "motor.c"
        "servo.c"
        "ir_sensor.c"
        "Mpu6050.c"
        "web_server.c"
        "auto_clean.c"
        "html_page.c"
    INCLUDE_DIRS "."
    REQUIRES
        driver
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        esp_http_client
        esp-tls
esp_timer
        nvs_flash
        freertos
        log
        lwip
)